[package]
name = "termplot"
version = "0.1.0"
edition = "2021"
authors = ["Xavier Hamel"]
description = "An extensible plotting library for CLI applications."
keywords = ["plot", "graph", "cli", "text", "terminal", "term", "plotting"]
categories = ["visualization", "command-line-interface"]
license = "MIT"
repository = "https://github.com/xavierhamel/termplot"
homepage = "https://github.com/xavierhamel/termplot"
readme = "README.md"

[dependencies]
drawille = "0.3.0"

[dev-dependencies]
rand = "0.8.5"
